logs/dag_id=dag_youtube_api/run_id=manual__2022-11-28T03:52:50.279939+00:00/task_id=creatableLoad/attempt=2.log
[2022-11-28T03:57:57.197+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_youtube_api.creatableLoad manual__2022-11-28T03:52:50.279939+00:00 [queued]>
[2022-11-28T03:57:57.226+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_youtube_api.creatableLoad manual__2022-11-28T03:52:50.279939+00:00 [queued]>
[2022-11-28T03:57:57.228+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-28T03:57:57.230+0000] {taskinstance.py:1363} INFO - Starting attempt 2 of 2
[2022-11-28T03:57:57.230+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-28T03:57:57.270+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): creatableLoad> on 2022-11-28 03:52:50.279939+00:00
[2022-11-28T03:57:57.302+0000] {standard_task_runner.py:55} INFO - Started process 986 to run task
[2022-11-28T03:57:57.330+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_youtube_api', 'creatableLoad', 'manual__2022-11-28T03:52:50.279939+00:00', '--job-id', '440', '--raw', '--subdir', 'DAGS_FOLDER/dag_youtube_api.py', '--cfg-path', '/tmp/tmpfa7xk1wr']
[2022-11-28T03:57:57.339+0000] {standard_task_runner.py:83} INFO - Job 440: Subtask creatableLoad
[2022-11-28T03:57:57.536+0000] {task_command.py:376} INFO - Running <TaskInstance: dag_youtube_api.creatableLoad manual__2022-11-28T03:52:50.279939+00:00 [running]> on host 1977dd9b5152
[2022-11-28T03:57:57.755+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dag_youtube_api
AIRFLOW_CTX_TASK_ID=creatableLoad
AIRFLOW_CTX_EXECUTION_DATE=2022-11-28T03:52:50.279939+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-28T03:52:50.279939+00:00
[2022-11-28T03:57:57.784+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag_youtube_api.py", line 178, in creatableLoad
    row.split(",")[10])
psycopg2.errors.SyntaxError: syntax error at or near "Mewah"
LINE 3: ...Emak Korea terharu banget karena dikasih masakan 'Mewah bang...
                                                             ^

[2022-11-28T03:57:57.796+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=dag_youtube_api, task_id=creatableLoad, execution_date=20221128T035250, start_date=20221128T035757, end_date=20221128T035757
[2022-11-28T03:57:57.816+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 440 for task creatableLoad (syntax error at or near "Mewah"
LINE 3: ...Emak Korea terharu banget karena dikasih masakan 'Mewah bang...
                                                             ^
; 986)
[2022-11-28T03:57:57.879+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-11-28T03:57:57.908+0000] {taskinstance.py:2623} INFO - 0 downstream tasks scheduled from follow-on schedule check
